[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/sprites/dino_dead.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/dino_run.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/dino_run_down.png" type="Texture" id=3]
[ext_resource path="res://scripts/dino.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/idle.png" type="Texture" id=5]
[ext_resource path="res://assets/sounds/death.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/jump.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/score_100.ogg" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=7]
flags = 9
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 88, 96 )

[sub_resource type="AtlasTexture" id=8]
flags = 9
atlas = ExtResource( 5 )
region = Rect2( 88, 0, 88, 96 )

[sub_resource type="AtlasTexture" id=4]
flags = 9
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 118, 96 )

[sub_resource type="AtlasTexture" id=5]
flags = 9
atlas = ExtResource( 3 )
region = Rect2( 118, 0, 118, 96 )

[sub_resource type="AtlasTexture" id=6]
flags = 9
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 88, 96 )

[sub_resource type="AtlasTexture" id=1]
flags = 9
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 88, 96 )

[sub_resource type="AtlasTexture" id=2]
flags = 9
atlas = ExtResource( 2 )
region = Rect2( 88, 0, 88, 96 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 0.5
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "run_down",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[node name="dino" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="animation_sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "idle"
playing = true

[node name="stay_collision" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -44, 11, -28, 32, -24, 48, 12, 48, 12, 32, 28, 8, 36, -8, 44, -17, 44, -38, 40, -46, 0, -46, -4, -42, -4, -16, -44, -16 )

[node name="sit_collision" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -59, -12, -59, 8, -37, 30, -37, 48, -21, 48, 20, 48, 20, 28, 51, 28, 59, 20, 59, -5, 54, -10 )

[node name="gravity_enable" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="death_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="jump_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="score_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="timeout" from="gravity_enable" to="." method="gravity_enable"]
